fixing .maphidden p display on mobile

--- a/mapview_stylesheet.css
+++ b/mapview_stylesheet.css
@@ -39,14 +39,14 @@ width:95%
   font-weight: 200;
   color:white;
   text-transform: uppercase;
-  margin: 30% 5% 10% 5%;
+  margin: 30% 5% 5% 5%;
   padding: 10px;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 15px;
 }
 
 #addendum {
-  font-size: 1rem;
+  font-size: 0.5rem;
   margin: 0 5% 10% 5%;
   font-weight: lighter;
 }
